ircc-integration-elasticsearch-eck/base/kibana-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kibana-route
  namespace: ircc-integration-elasticsearch-eck
spec:
  host: TODO
  to:
    kind: Service
    name: kibana-instance-kb-http
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
